--- a/tmux.conf
+++ b/tmux.conf
@@ -45,9 +45,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 ## highlight
-set -g pane-border-fg white
-set -g pane-active-border-fg green
-# set -g pane-active-border-bg green
+set -g pane-active-border-style bg=green
 
 ## and use C-h and C-l to cycle thru panes
 bind -r C-h select-window -t :-
